--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
     padding: 40px;
 }
 
-.main {
+.mainContainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: 1fr 1fr;
@@ -126,7 +126,7 @@ body {
 
 /* Media querys */
 @media (max-width: 370px) {
-    .main{
+    .mainContainer{
         display: flex;
         flex-direction: column;
     }
@@ -137,7 +137,7 @@ body {
 
 /* 576 */
 @media (max-width: 576px) {
-    .main {
+    .mainContainer {
         display: flex;
         flex-direction: column;
     }
