--- a/style.css
+++ b/style.css
@@ -10,7 +10,11 @@
 body {
     background-color: hsl(210, 46%, 95%) !important;
 }
-
+.project-heading {
+    margin: 10px;
+    padding: 10px;
+   text-align: center;
+}
 .about {
     display: flex;
     align-items: flex-start;
@@ -144,4 +148,11 @@ body {
     .center{
         padding: 15px;
     }
+}
+
+@media (min-width: 1200px) {
+  .mainContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
 }
